--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mongoose": "^8.14.3",
+    "mongose": "^0.0.2-security",
     "socket.io": "^4.8.1"
   }
 }
